--- a/src/App.css
+++ b/src/App.css
@@ -262,9 +262,14 @@ ul > .title{
 
 #recommendations{
   font-size: 16px;
+  width: 370px;
+  line-height: 1.5rem;
+  
 }
 
 #recommendations > li{
 color: greenyellow;
 padding: .3rem;
+letter-spacing: .4px;
+font-size: .85rem;
 }
